--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,19 @@
-*{
+
+
+
+* {
     margin: 0;
     padding: 0;
-}
-
-.hero {
+  }
+  
+  .hero {
+    background-image: url('./images/bg.jpg');
     background-size: cover;
-    width: 100px;
-    width: 100px;
-}
+    background-position: center;
+    width: 98.8vw;
+    height: 100vh;
+  }
+
+  .second-section{
+    height: 100vh;
+  }
