--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,11 @@ main {
 
 .hero {
 
-  background-image: url('./images/bg.jpg');
+  background-image: url('./images/bg.png');
   background-size: cover;
   background-position: center;
   width: 99vw;
-  height: 100vh;
+  height: 110vh;
 
 }
 
@@ -23,18 +23,24 @@ main {
 
 
 .topLeft img{
-  position: relative;
-  bottom: 35vh;
-  scale: 1.2;
-  left: 12vw;
+  position: absolute;
+  bottom: 45vh;
+  scale: 1.3;
+  left: 0vw;
 }
 
 .redBowl img {
-  
+  position: absolute;
+  bottom: -2vh;
+  scale: 1.4;
+  left: 2vw;
 }
 
 .WhiteRightDown img {
- 
+  position: absolute;
+  bottom: 38vh;
+  scale: 1.2;
+  left: 12vw;
 }
 
 
