--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ main {
   background-position: center;
   width: 100vw;
   height: 110vh;
+  position: absolute;
 
 }
 
@@ -23,29 +24,30 @@ main {
 
 
 .topLeft img{
-  position: absolute;
-  bottom: 45vh;
+  position: relative;
+  bottom: 10vh;
   scale: 1.3;
   left: 0vw;
 }
 
 .redBowl img {
-  position: absolute;
-  bottom: -2vh;
+  position: relative;
+  bottom: 8vh;
   scale: 1.4;
   left: 2vw;
 }
 
 .whiteRightDown{
-  position: relative;
-  overflow: hidden;
+  /* position: relative;
+  overflow: hidden; */
 }
 
 .whiteRightDown img {
-  position: absolute;
-  left: 70vw;
-  scale : 1.3;
-  bottom: -10vw;
+  width: 30vw;
+  position: relative;
+  left: 65vw;
+  scale : 1.1;
+  bottom: 30vw;
 }
 
 
