--- a/src/App.css
+++ b/src/App.css
@@ -7,47 +7,48 @@ main {
   overflow-x: hidden;
 }
 
+body{
+  overflow-x: hidden;
+}
+
 .hero {
 
   background-image: url('./images/bg.png');
   background-size: cover;
   background-position: center;
-  width: 100vw;
-  height: 110vh;
+  width: 99vw;
+  height: 105vh;
   position: absolute;
 
 }
 
 .second-section {
-  height: 100vh;
+  height: 200vh;
 }
 
 
 .topLeft img{
   position: relative;
-  bottom: 10vh;
+  bottom: 13vh;
   scale: 1.3;
   left: 0vw;
 }
 
 .redBowl img {
   position: relative;
-  bottom: 8vh;
+  bottom: 10vh;
   scale: 1.4;
-  left: 2vw;
+  left: 1vw;
 }
 
-.whiteRightDown{
-  /* position: relative;
-  overflow: hidden; */
-}
+
 
 .whiteRightDown img {
   width: 30vw;
   position: relative;
-  left: 65vw;
+  left: 69vw;
   scale : 1.1;
-  bottom: 30vw;
+  bottom: 32vw;
 }
 
 
