--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+
 * {
   margin: 0;
   padding: 0;
@@ -7,37 +10,74 @@ main {
   overflow-x: hidden;
 }
 
-body{
+body {
   overflow-x: hidden;
 }
 
 .hero {
 
-  background-image: url('./images/bg.png');
+  background-image: url('./images/bg.jpg');
   background-size: cover;
   background-position: center;
   width: 99vw;
   height: 105vh;
   position: absolute;
+  backdrop-filter: blur(10px);
 
 }
 
 
-.titleCard{
+.titleCard {
   position: relative;
   left: 38vw;
-  top: 50vh;
+  top: 34vh;
 }
 
-.title{
+.title {
   width: 535px;
   height: 115px;
-  font-size: 90;
+  font-size: 90px;
+  font-family: Inter;
+  font-weight: 900;
+  color: white;
+}
+
+.titleDescription{
+  font-size: 26px;
+  font-family: inter;
+  font-weight: 600;
+  color: white;
+}
+
+.tryit{
+  width: 150px;
+  height: 50px;
+  background-color: white;
+  color: rgb(0, 0, 0);
+  border-radius: 50px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1vw;
+  font-size: 18px;
+  font-weight: 500;
+  font-family: inter;
+  position: relative;
+  top: 3vh;
+}
+
+.tryit:hover{
+  scale: 1.05;
+  transition: smooth 2ms;
+}
+
+.tryit img{
+  width: 16px;
 }
 
 
-
-.topLeft img{
+.topLeft img {
   position: relative;
   bottom: 13vh;
   scale: 1.3;
@@ -57,7 +97,7 @@ body{
   width: 30vw;
   position: relative;
   left: 69vw;
-  scale : 1.1;
+  scale: 1.1;
   bottom: 32vw;
 }
 
