--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 
 main {
   overflow-x: hidden;
+  
 }
 
 body {
@@ -22,21 +23,21 @@ body {
   width: 99vw;
   height: 105vh;
   position: absolute;
-  backdrop-filter: blur(10px);
+  
 
 }
 
 
 .titleCard {
   position: relative;
-  left: 38vw;
+  left: 34vw;
   top: 34vh;
 }
 
 .title {
   width: 535px;
   height: 115px;
-  font-size: 90px;
+  font-size: 120px;
   font-family: Inter;
   font-weight: 900;
   color: white;
@@ -47,6 +48,9 @@ body {
   font-family: inter;
   font-weight: 600;
   color: white;
+
+  position: relative;
+  top: 5vh;
 }
 
 .tryit{
@@ -64,7 +68,7 @@ body {
   font-weight: 500;
   font-family: inter;
   position: relative;
-  top: 3vh;
+  top: 8vh;
 }
 
 .tryit:hover{
@@ -79,15 +83,15 @@ body {
 
 .topLeft img {
   position: relative;
-  bottom: 13vh;
+  bottom: 40vh;
   scale: 1.3;
   left: 0vw;
 }
 
 .redBowl img {
   position: relative;
-  bottom: 10vh;
-  scale: 1.4;
+  bottom: 20vh;
+  scale: 1;
   left: 1vw;
 }
 
@@ -122,4 +126,6 @@ body {
 
 .second-section {
   height: 200vh;
+  
+ 
 }
