--- a/src/App.css
+++ b/src/App.css
@@ -87,12 +87,19 @@ body {
   scale: 1.3;
   left: 0vw;
 }
+.topLeft{
+  width: 100px;
+  height: 400px;
+}
 
 .redBowl img {
   position: relative;
   bottom: 20vh;
   scale: 1;
   left: 1vw;
+}
+.redBowl{
+  width: 100px;
 }
 
 
@@ -105,6 +112,9 @@ body {
   bottom: 32vw;
 }
 
+.whiteRightDown{
+  width: 100px;
+}
 
 .autoRotate {
   animation: autoRotate;
@@ -124,8 +134,29 @@ body {
 
 
 
-.second-section {
-  height: 200vh;
-  
- 
+.secondPageHead{
+  position: relative;
+  bottom: 90vh;
+}
+
+
+
+
+.typing-text {
+  animation: typing;
+  animation-timeline: view();
+  animation-range: entry 0% cover 50%;
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 2px solid black; /* Optional: adds a cursor effect */
+  width: fit-content;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
 }
