--- a/src/App.css
+++ b/src/App.css
@@ -160,3 +160,16 @@ body {
     width: 100%;
   }
 }
+
+
+
+/* {authorisation  css} */
+
+.Threeleft{
+  position: relative;
+  right: 30vw;
+  overflow: hidden;
+  height: 100vh;
+  display: flex;
+}
+
